sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:12: error: not found: value beforeRED
  for (i <- afterBlue+1 to beforeRED-1){
                           ^