sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  var afterBlue =0
  var beforeRed =getSize()-1
  while (getColor(beforeRed)==RED){
    beforeRed=beforeRed-1
  }
  
  while (getColor(afterBlue)==BLUE){
    afterBlue=afterBlue+1
  }
  for (i <- afterBlue+1 to beforeRED-1){
    if (getColor(i)==BLUE){
      swap(afterBlue+1,i)
      afterBlue=afterBlue+1
    }
    else if (getColor(i)==RED){
      swap(beforeRed-1,i)
    }
  }
}